Fix issue bg dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,3 @@ html {
   background-color: white;
 }
 
-.main-bg-dark {
-  background-color: black;
-}
-
